# VS-Code-Memory-Manager

./: .gitignore  .travis.yml  CMakeLists.txt  VSPtr.h  library.h
Memory Manager/: .travis.yml  CMakeLists.txt  VSPointer.h  VSPtrRemote.h  compileLibrary.sh  main.cpp  sonar-project.properties
Memory Manager/Client/: ClientSocket.cpp  ClientSocket.h  remoteGarbageCollectorClient.cpp  remoteGarbageCollectorClient.h
Memory Manager/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h  VSPtrInstance.h
Memory Manager/VSPointer/: VSPointer.h
MemoryManager/: CMakeLists.txt  compileLibrary.sh  docsConfig  main.cpp  sonar-project.properties  vsptr.json
MemoryManager/Client/: ClientSocket.cpp  ClientSocket.h  InitializeClient.cpp  InitializeClient.h  RemoteMemory.cpp  RemoteMemory.h  remoteGarbageCollectorClient.cpp  remoteGarbageCollectorClient.h
MemoryManager/Configuration/: compileLibrary.sh  compileServer.sh  initServer.cpp
MemoryManager/Configuration/lib/: ClientSocket.h  GarbageCollector.h  InitializeClient.h  RemoteMemory.h  VSPointer.h  VSPtrInstance.h
MemoryManager/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h  VSPtrInstance.h
MemoryManager/GarbageCollector/UUID/: UUID.cpp
MemoryManager/Server/: .ServerSocket.cpp.swp  ServerSocket.cpp  ServerSocket.h
MemoryManager/VSPointer/: VSPointer.h  VSPtrRemote.h
MemoryManager/docs/html/: Client_2ClientSocket_8h_source.html  Client_2RemoteMemory_8h_source.html  Configuration_2lib_2ClientSocket_8h_source.html  Configuration_2lib_2GarbageCollector_8h_source.html  Configuration_2lib_2RemoteMemory_8h_source.html  Configuration_2lib_2VSPointer_8h_source.html  classes.html  (+44 more)
VSCode-Memory-Manager/: CMakeLists.txt  VSPointer.h  compileLibrary.sh  library.h
VSCode-Memory-Manager/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h  UUID.h  VSPtrInstance.h
VSCode-Memory-Manager/List/: ListGC.h
(+89 files in other folders)
